tests/negative/gold/prefixed-assign4-test.gold
tests/negative/prefixed-assign4-test.toit:8:6: error: Can't assign to final global
  pa.final-global = 3
     ^~~~~~~~~~~~
Compilation failed
